--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "vue-cli-plugin-scaff",
-  "version": "5.2.8",
+  "version": "5.3.13",
   "description": "plugin for `vue-cli-scaff`",
   "main": "index.js",
   "dependencies": {
-    "@scaff/vue-cli-mock": "^1.2.3",
-    "@vue/cli-shared-utils": "^4.3.1",
+    "@scaff/vue-cli-mock": "^1.2.3"
+  },
+  "devDependencies": {
+    "@vue/cli-shared-utils": "^4.5.6",
+    "glob": "^7.1.6",
     "postcss-plugin-px2rem": "^0.8.1"
   },
   "author": "joenix",
